--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+  
+title: Architect theme
+description: Architect is a theme for GitHub Pages.
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-cayman
-title: [The title of your site]
-description: [A short description of your site's purpose]
+
